--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 package-lock.json
+**/package-lock.json
 
 # dependencies
 node_modules
@@ -36,3 +37,4 @@ yarn-error.log*
 
 .vs
 dist
+**/dist
