--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,19 +23,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
+    "@mdx-js/react": "^2.1.3",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-interactions": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack4": "^6.2.9",
     "@storybook/manager-webpack4": "^6.2.9",
+    "@storybook/mdx2-csf": "^0.0.3",
     "@storybook/react": "^6.2.9",
     "@storybook/testing-library": "^0.0.13",
-    "storybook-css-modules-preset": "^1.0.8",
-    "@storybook/addon-postcss": "^2.0.0",
-    "chromatic": "^5.8.0",
     "babel-loader": "^8.2.5",
+    "chromatic": "^5.8.0",
     "config": "*",
+    "storybook-css-modules-preset": "^1.0.8",
     "tsup": "^5.10.1"
   }
 }
