--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,6 +27,7 @@
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-interactions": "^6.2.9",
+    "@storybook/addon-docs": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack4": "^6.2.9",
@@ -34,10 +35,10 @@
     "@storybook/mdx2-csf": "^0.0.3",
     "@storybook/react": "^6.2.9",
     "@storybook/testing-library": "^0.0.13",
+    "storybook-css-modules-preset": "^1.0.8",
     "babel-loader": "^8.2.5",
     "chromatic": "^5.8.0",
     "@lis2-ui/config": "*",
-    "storybook-css-modules-preset": "^1.0.8",
     "tsup": "^5.10.1",
     "ag-grid-react": "28.1.1"
   }
